fix: missing report results in HL7 mapper